# Tweet-Sentimentality

./: CMakeLists.txt  Classifier.cpp  Classifier.h  DSString.cpp  DSString.h  DSVector.h  Date.cpp  Date.h  Sort.cpp  Sort.h  Tweet.cpp  Tweet.h  Tweets.cpp  Tweets.h  main.cpp
.github/workflows/: build.yaml
